--- a/_sources/ch1.ipynb
+++ b/_sources/ch1.ipynb
@@ -97,9 +97,12 @@
     "\n",
     "(note that it makes no biological sense to worry about $n<0$). There are two values of $n$ for which $dn/d\\tau=0$, at $n=0$ and $n=1$, which are the *equilibria* of the system. Therefore for any starting value of $n>0$ the population should move towards a final state of $n=1$, suggesting that the equilibrium at $n=0$ is *unstable* and the equilibrium at $n=1$ is *stable*. We can think about this more by sketching the curve $dn/d\\tau$ vs $n$.\n",
     "\n",
-    "**Have a go**: Sketch the curve $dn/d\\tau$ vs $n$ and use it to identify the key aspects of the system.\n",
+    "`````{admonition} Have a go\n",
+    ":class: tip\n",
+    "Sketch the curve $dn/d\\tau$ vs $n$ and use it to identify the key aspects of the system. \n",
+    "`````\n",
     "\n",
-    "We can easily mark our equilibria at $n=0$ and $n=1$ and then consider the shape of $dn/d\\tau$, which we can see is a quadratic. (We can also mark on the qualitative direction of trajectories on the x-axis, giving a *phase line*.) Considering the gradients of this curve at the two equilibria, we can see that these give us a good description of their local stability. In particular if we take $dn/d\\tau=f(n)$, then if $df/dn<0$ at an equilibrium then it is stable, and if $df/dn>0$ at an equilibrium then it is unstable. This is known as {\\em linearisation} around the equilibria. Notice, then, that we have fully described the possible behaviours of this system without having to explicitly solve the equation. \n",
+    "We can easily mark our equilibria at $n=0$ and $n=1$ and then consider the shape of $dn/d\\tau$, which we can see is a quadratic. (We can also mark on the qualitative direction of trajectories on the x-axis, giving a *phase line*.) Considering the gradients of this curve at the two equilibria, we can see that these give us a good description of their local stability. In particular if we take $dn/d\\tau=f(n)$, then if $df/dn<0$ at an equilibrium then it is stable, and if $df/dn>0$ at an equilibrium then it is unstable. This is known as *linearisation* around the equilibria. Notice, then, that we have fully described the possible behaviours of this system without having to explicitly solve the equation. \n",
     "\n",
     "## Case study: spruce budworm\n",
     "\n",
