--- a/_sources/ch7.ipynb
+++ b/_sources/ch7.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5199e715",
    "metadata": {},
@@ -56,17 +57,12 @@
     "I^*&=\\frac{(b-d)S^* }{\\beta S^*-b-\\gamma}=\\frac{(b-d)(d+\\alpha+\\gamma)}{\\beta(\\alpha-(b-d))}.\n",
     "\\end{align}\n",
     "\n",
-    "To determine whether this equilibrium is stable, and so whether the disease can indeed control the rabbit population to this equilibrium level, we need to look at the Jacobian,\n",
+    "To determine whether this equilibrium is stable, and so whether the disease can indeed control the rabbit population to this equilibrium level, we need to look at the Jacobian.\n",
     "\n",
-    "\\begin{align*}\n",
-    "J=&\\left(\n",
-    "\\begin{array}{cc}\n",
-    "b-d-\\beta I^* & b-\\beta S^*+\\gamma\\\\\n",
-    "\\beta I^* & \\beta S^*-(d+\\alpha+\\gamma)\n",
-    "\\end{array}\n",
-    "\\right)\n",
-    "\\end{align*}\n",
-    "\n",
+    "`````{admonition} Have a go\n",
+    ":class: tip\n",
+    "Write out the general Jacobian for this system.\n",
+    "`````\n",
     "Substituting in our equilibrium values for $S^*$ and $I^*$ means that,\n",
     "\n",
     "\\begin{align*}\n",
