--- a/_sources/ch9.ipynb
+++ b/_sources/ch9.ipynb
@@ -31,7 +31,7 @@
     "\\frac{dV}{dt} &= N\\delta T^*-cV\\label{hiv3}\n",
     "\\end{align}\n",
     "\n",
-    "It is easy to see that there is an HIV-free equilibrium for $(T,T^*,V)=(s/d,0,0)$. We have not covered how to assess stability in a three-dimensional system in this module. In fact, the trace-determinant conditions we have used in previous models are a special case of stability criteria called \\textbf{Routh-Hurwitz} conditions. We will not cover these here, but using them we can find that the HIV-free equilibrium is stable if $c>kNs/d$. In other words, the decay rate of the virus must be high, and the infection rate and production rate (i.e. $N$) must be low. \n",
+    "It is easy to see that there is an HIV-free equilibrium for $(T,T^*,V)=(s/d,0,0)$. We have not covered how to assess stability in a three-dimensional system in this module. In fact, the trace-determinant conditions we have used in previous models are a special case of stability criteria called *Routh-Hurwitz conditions*. We will not cover these here, but using them we can find that the HIV-free equilibrium is stable if $c>kNs/d$. In other words, the decay rate of the virus must be high, and the infection rate and production rate (i.e. $N$) must be low. \n",
     "\n",
     "Of course, when a patient is to undergo treatment, they will not be HIV-free! We are therefore more interested in the pre-treatment infected steady-state. Setting the equations for $dT^*/dt$ and $dV/dt$ to zero, yields,\n",
     "\n",
