--- a/_sources/intro.ipynb
+++ b/_sources/intro.ipynb
@@ -24,13 +24,13 @@
     "* We have two in-person lectures a week: \n",
     "    * Tuesdays 11am - Hicks LT10\n",
     "    * Wednesdays 10am - Hicks LT5\n",
-    "* For two lectures we will instead have a computer lab:\n",
-    "    * Wednesday week 5 - Alfred Denny Building A04\n",
-    "    * Tuesday week 10 - Alfred Denny Building A04\n",
+    "* For two of the lectures we will instead have a computer lab - Wednesday week 5 and Tuesday week 10 in Alfred Denny Building A04.\n",
     "* Pre-recorded videos will also be made available should you not be able to attend a lecture, and/or for revision.\n",
     "* Assessment is 80% exam and 20% coursework.\n",
     "* The coursework component takes place in week 6, with a due date of Monday week 8.\n",
-    "* Office hours are Tuesdays 12pm, either online or in-person as you prefer. **You are strongly encouraged to book office hour slots using my Google Calendar**.\n",
+    "* I am running two types of student drop-in hours this year:\n",
+    "    * In my office (G27b) Tuesdays 12pm, either online or in-person. Best for working through questions and problems from the material and homeworks. You are strongly encouraged to book slots using my [Google Calendar appointments page](https://calendar.google.com/calendar/u/0/selfsched?sstoken=UVA1NV9VbkZzaWFqfGRlZmF1bHR8ZjM4N2Y1MmYyYjcxMmUzMjgzMjQ2NDcyNjc3MTRkYzM).\n",
+    "    * In the Jessop West cafe Wednesdays 11am. Best for more informal questions and general chats about mathematical biology, science and life.\n",
     "* Notes are provided as HTML and PDF. \n",
     "* You are encouraged to engage in **active learning**. At points in the notes you will see,\n",
     "\n",
@@ -38,7 +38,7 @@
     ":class: tip\n",
     "At these points you will be asked to complete some workings in the lecture and/or explore a model with provided interactive python code (you will need to be logged into your GMail account to use this). \n",
     "`````\n",
-    "* I hope for there to be a welcoming and inclusive environment in our lectures. If you feel you are not fully engaged in the classes for any reason, please come and see me during an office hour.\n",
+    "* I hope for there to be a welcoming and inclusive environment in our lectures. If you feel you are not fully welcomed in the classes for any reason, please think about coming for a chat during an office hour.\n",
     "\n",
     "\n",
     "## What is the course about?\n",
