--- a/_sources/ch17.ipynb
+++ b/_sources/ch17.ipynb
@@ -5,10 +5,18 @@
    "id": "b489347b",
    "metadata": {},
    "source": [
-    "# 10 - Computer lab\n",
+    "# 18 - Computer lab \n",
     "\n",
-    "In this session we will explore epidemic models in more detail using some provided python code. Link to follow."
+    "In this session we will explore genetic circuit models in more detail using some provided python code. Link to follow."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b388e93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
