--- a/_sources/ch6.ipynb
+++ b/_sources/ch6.ipynb
@@ -5,15 +5,17 @@
    "id": "1c096efa",
    "metadata": {},
    "source": [
-    "# 6 - The SIR model with demographics <a name=\"chapter6\"></a>\n",
+    "# 6 - The SIR model with demographics \n",
     "\n",
     "## Updating the model\n",
     "\n",
     "Let us now add some increased detail in to the model by including birth and death processes. Let's begin by drawing a schematic of the system again:\n",
     "\n",
+    "````{card}\n",
     "<img src='sir2.png' height=\"300\" alt=\"Schematic of the SIR model with demographics\">\n",
     "\n",
     "*Figure: Schematic of the SIR model with births and deaths now included.*\n",
+    "````\n",
     "\n",
     "We will make the simplifying assumption that the birth rate and death rate are equal, so that the population would be at equilibrium in the absence of disease (this is a rather questionable assumption for many ecological populations, but perhaps reasonable for modern human populations). This gives the equations:\n",
     "\n",
@@ -59,6 +61,8 @@
     "\n",
     "We shall now deal with each of our equilibria in turn.\n",
     "\n",
+    "----\n",
+    "\n",
     "**Disease-free equilibrium**\n",
     "\n",
     "\\begin{equation*}\n",
@@ -74,6 +78,8 @@
     "\n",
     "* if $R_0<1$, the disease-free equilibrium is stable;\n",
     "* if $R_0>1$, the disease-free equilibrium is unstable.\n",
+    "\n",
+    "----\n",
     "\n",
     "**Endemic equilibrium**\n",
     "\n",
@@ -111,17 +117,26 @@
     ":class: tip\n",
     "Draw the two qualitatively different phase portraits for this system.\n",
     "`````\n",
+    "```{dropdown} Click for solution\n",
+    "The two phase portraits are sketched below. If you start sketching a phase portrait you should find that the only way you can produce two qualitatively different phase portraits is again about the placement of the vertical nullcline, which relates to whether or not $R_0>1$ or not. In the first diagram, all trajectories will eventually approach the bottom-right corner at the disease-free equilibrium. In the second diagram, you should see the new endemic equilibrium in the middle where the two nullclines cross. Trajectories approach this equilibrium, moving around it anti-clockwise (as I once read, if you can’t remember clockwise/anti-clockwise directions, clockwise is the way you dial a phone).\n",
+    "\n",
+    "<img src='endemic_phase.png' height=\"300\" alt=\"Phase portraits \">\n",
+    "\n",
+    "*Figure: Phase portraits for the SIR model with demographics.*\n",
+    "```\n",
     "\n",
     "$R_0$ is a quantity that is often estimated for diseases when they emerge, and gives a good indication of how contagious they are and (as we shall see later) how easy they will be to eradicate. We can also use $R_0$ as a useful bifurcation parameter to draw a bifurcation diagram of this system below. Note again the key value of $R_0=1$ where the transcritical bifurcation occurs.\n",
     "\n",
+    "````{card}\n",
     "<img src='sir2bif.png' height=\"300\" alt=\"Bifurcation diagram of SIR model as $R_0$ varies\">\n",
     "\n",
     "*Figure: Bifurcation diagram showing the infected equilibrium as $R_0$ is varied.*\n",
+    "````\n",
     "\n",
     "## 3 key points\n",
     "1. We can extend the SIR model to be more realistic for long-term predictions by including births and deaths.\n",
     "2. We now get an endemic equilibrium, where the disease will remain in the population over the long term.\n",
-    "3. $R_0$ remains a key quantity, in particular determining whether we get an endemic equilibrium or the disease dies out."
+    "3. $R_0$ remains a key quantity, in particular determining whether we get an endemic equilibrium or the disease dies out. "
    ]
   },
   {
@@ -135,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
