--- a/_sources/ch11.ipynb
+++ b/_sources/ch11.ipynb
@@ -5,9 +5,9 @@
    "id": "f3e19e69",
    "metadata": {},
    "source": [
-    "## 11-12 Project Week\n",
+    "## 11-12 Project Week \n",
     "\n",
-    "In weeks 6 and 7 you will complete a project that is worth 20% of your module mark. There are two good reasons for setting this project assessment:\n",
+    "In weeks 6 and 7 you will complete a project that is worth 20% of your module mark (for 3rd year students, a bit less for 4th years). There are two good reasons for setting this project assessment:\n",
     "\n",
     "1. I can think of few examples where you will find yourself doing a job where you are asked to conduct mathematics work (or any work for that matter) in an exam-style setting. It is **much** more common for you to be set project work that you should conduct over days or weeks and return a written or oral report. Project work is absolutely the day-to-day life of a mathematical biologist, and so it is a good experience for you to have.\n",
     "2. Exam-based assessments will only play to the strengths of, and so reward, some learners. It's important for us to ensure that we are providing all students with a chance to shine by offering different assessment styles.\n",
@@ -17,7 +17,7 @@
     "The report may be submitted in any of the following formats:\n",
     "\n",
     "* Handwritten report that is captured using Microsoft Lens or similar to convert to a PDF.\n",
-    "* A PDF created using Microsoft Word or LaTeX.\n",
+    "* A PDF created using Microsoft Word or LaTeX or Markdown.\n",
     "* An HTML page created using Markdown.\n",
     "\n",
     "You may discuss the work with each other but you must each produce your own report and you should be careful not to produce an identical report with someone you have worked with.\n",
@@ -41,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -55,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
