--- a/_sources/ch2.ipynb
+++ b/_sources/ch2.ipynb
@@ -5,7 +5,7 @@
    "id": "1a801de8",
    "metadata": {},
    "source": [
-    "# 2 - Bifurcations and introducing competition <a name=\"chapter2\"></a>\n",
+    "# 2 - Bifurcations and introducing competition \n",
     "\n",
     "## Introducing bifurcations\n",
     "\n",
@@ -19,9 +19,11 @@
     "\n",
     "We can see an example of a transcritical bifurcation in the spruce budworm model along the line $N=0$. For $\\rho<100$ the $N=0$ equilibria is unstable. Techncially a second equilbiria exists at $N<0$, which would be locally stable, but is not biologically feasible. For $\\rho>100$ we see that now the $N=0$ equilibrium is stable, with the second equilibrium now present at $N>0$ being unstable. The point where these two equilibria meet and swap stability, $\\rho=100$ is the transcriticial bifurcation, as we can see in the bifurcation diagram below.\n",
     "\n",
+    "````{card}\n",
     "<img src='budworm-bif.png' height=\"300\" alt=\"Bifurcation diagram of the spruce budwom model\">\n",
     "\n",
     "*Figure: Bifurcation diagram of the spruce budworm model, showing both a transcritical and saddle-node bifurcation.*\n",
+    "````\n",
     "\n",
     "### Saddle-Node bifurcation\n",
     "The transcritical bifurcation occurs when (at least) one equilibria must always exist over the full range of the parameter (i.e. the trivial equilibrium). However, there are also cases where equilibria can  be created or destroyed as a parameter is varied. These are called saddle-node or blue-sky bifurcations (the former because what gets created at the bifurcation is a stable-unstable pair of equilibria; the latter because the equilibria appear out of the clear blue sky).\n",
@@ -35,10 +37,11 @@
     "\n",
     "The reason for the naming of this bifurcation is obvious by looking at the bifurcation diagram below. At low value of the bifurcation parameter there is a single stable equilibria. At the bifurcation point this existing point remains but loses stability, and two new stable equilibria emerge. \n",
     "\n",
+    "````{card}\n",
     "<img src='pitchfork.png' height=\"300\" alt=\"Example of a pitchfork bifurcation.\">\n",
     "\n",
     "*Figure: Made up example of a pitchfork bifurcation.*\n",
-    "\n",
+    "````\n",
     "\n",
     "## Interacting populations: Competition\n",
     "\n",
@@ -82,16 +85,40 @@
     "&\\frac{dG}{dt}=0 \\implies G=0 \\quad \\mathrm{ or }\\quad  G=c-dR\n",
     "\\end{align*}\n",
     "\n",
-    "We therefore have a nullcline on each axis, and two nullclines which are decreasing straight lines on our plot. These nullclines can be ordered in four relative configurations, giving us four qualitatively different phase portraits.\n",
+    "We therefore have a nullcline along each axis, and two nullclines which are decreasing straight lines on our plot. Qualitatively, there are four different ways we can configure these two nullclines:\n",
+    "\n",
+    "1. Red starts above Grey and they do not cross (in the biologically feasible region).\n",
+    "2. Grey starts above Red and they do not cross (in the biologically feasible region).\n",
+    "3. Grey starts above Red and they do cross.\n",
+    "4. Red starts above Grey and they do cross.\n",
+    "\n",
+    "When drawing the direction fields we can say that,\n",
+    "\n",
+    "* If $R$ and $G$ are both small (we are below both nullclines), $dR/dt>0$ and $dG/dt>0$.\n",
+    "* If $R$ and $G$ are both large (we are above both nullclines), $dR/dt<0$ and $dG/dt<0$.\n",
+    "* If we are above the $R$-nullcline but below the $G$-nullcline, $dR/dt<0$ but $dG/dt>0$.\n",
+    "* If we are below the $R$-nullcline but above the $G$-nullcline, $dR/dt>0$ but $dG/dt<0$.\n",
+    "\n",
+    "This gives us enough information to sketch out the four phase portraits and assess the qualitative behaviour. The first two cases that we listed above are sketched out below. Work your way through the procedure above and see how these have been built up.\n",
+    "\n",
+    "<img src='comp_phase1.png' height=\"300\" alt=\"Phase portraits for the competition model.\">\n",
+    "\n",
+    "*Figure: Phase portraits for the competition model.*\n",
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
-    "Sketch out the four qualitatively different phase portraits.\n",
+    "Sketch out the remaining two qualitatively different phase portraits.\n",
     "`````\n",
+    "\n",
+    "```{dropdown} Click for solution\n",
+    "<img src='comp_phase2.png' height=\"300\" alt=\"Phase portraits for the competition model.\">\n",
+    "\n",
+    "*Figure: Phase portraits for the competition model.*\n",
+    "```\n",
     "\n",
     "By definition, equilibria occur at the points of intersection of the $R$- and $G$-nullclines. Looking at our phase portraits, we see that $(0,0)$, $(0,c)$ and $(a,0)$ are always equilibria. These respectively mean no squirrels present, only grey squirrels present and only red squirrels present. Then we *sometimes* have another equilibrium - if $a>bc$ and $c>ad$ or $a<bc$ and $c<ad$ - where both species are present.\n",
     "\n",
-    "To get an idea of how the population levels behave in the four different parameter regimes, we can look at the *direction fields* for each case. We can deduce from our phase portraits that the qualitative natures of the trajectories are:\n",
+    "We can deduce from our phase portraits that the qualitative natures of the trajectories are:\n",
     "\n",
     "* in (a), $R$ ``wins\" and settles to a steady population level, while $G$ goes extinct.\n",
     "* in (b), $G$ ``wins\" and settles to a steady population level, while $R$ goes extinct.\n",
@@ -100,7 +127,7 @@
     "\n",
     "## 3 key points\n",
     "1. Changes in the existence and/or stability of equilibria are called bifurcations.\n",
-    "2. We can model competition between two species by including a negative interaction term in bth species' ODEs.\n",
+    "2. We can model competition between two species by including a negative interaction term in both species' ODEs.\n",
     "3. Phase portraits show how four different qualitative outcomes can occur in a competition model."
    ]
   },
@@ -115,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
