--- a/_sources/ch3.ipynb
+++ b/_sources/ch3.ipynb
@@ -5,7 +5,7 @@
    "id": "bd0a964f",
    "metadata": {},
    "source": [
-    "# 3 - Competition continued <a name=\"chapter3\"></a>\n",
+    "# 3 - Competition continued \n",
     "\n",
     "## Linear stability analysis\n",
     "\n",
@@ -31,13 +31,17 @@
     "* $tr(J) =  \\frac{\\partial f}{\\partial R} + \\frac{\\partial g}{\\partial G}$,\n",
     "* $det(J) = \\left[\\frac{\\partial f}{\\partial R}\\right].\\left[\\frac{\\partial g}{\\partial G}\\right]-\\left[\\frac{\\partial f}{\\partial G}\\right].\\left[\\frac{\\partial g}{\\partial R}\\right].$\n",
     "\n",
-    "The signs of these two quantities combine to tell us about the stability of the equilibrium, which is best seen through the following diagram:\n",
+    "These relate to the eigenvalues through as $tr(J)=\\lambda_1+\\lambda_2$ and $det(J)=\\lambda_1\\lambda_2$. The signs of these two quantities combine to tell us about the stability of the equilibrium, which is best seen through the following diagram:\n",
     "\n",
+    "````{card}\n",
     "<img src='tracedet.png' height=\"300\" alt=\"diagram of stability condition based on trace and determinant\">\n",
     "\n",
     "*Figure: Stability of an equilibrium using the trace and determinant of the Jacobian.*\n",
+    "````\n",
     "\n",
-    "It is also useful to note that $tr(J)=\\lambda_1+\\lambda_2$ and $det(J)=\\lambda_1\\lambda_2$. Also, note that for a 2x2 Jacobian, if one of the off-diagonal entries is zero, the eigenvalues are simply the two entries in the main-diagonal.\n",
+    "```{note}\n",
+    "For a 2x2 Jacobian, if one of the off-diagonal entries is zero, the eigenvalues are simply the two entries in the main-diagonal.\n",
+    "```\n",
     "\n",
     "Let's write down the generic Jacobian for our system,\n",
     "\n",
@@ -51,6 +55,8 @@
     "\\end{align*}\n",
     "\n",
     "We can use the information from the Jacobians to derive the eigenvalues at each equilibria explicitly. In particular we can use the signs of the trace and determinant to establish the stability of each equilibrium. \n",
+    "\n",
+    "----\n",
     "\n",
     "**The extinction equilibrium**\n",
     "\n",
@@ -67,6 +73,8 @@
     "\n",
     "which has $T=a+c>0$, $D=ac>0$ and $T^2-4D = (a-c)^2 >0$, where $T$ and $D$ are the trace and determinant of the matrix. Thus $(0,0)$ is always an unstable node.\n",
     "\n",
+    "----\n",
+    "\n",
     "**The two single-species equilibria**\n",
     "\n",
     "At $(a,0)$, we have\n",
@@ -74,15 +82,17 @@
     "\\begin{align*}\n",
     "J=&\\left(\n",
     "\\begin{array}{cc}\n",
-    "a-bc & 0  \\\\\n",
-    "-cd & -c \n",
+    "-a & -ab  \\\\\n",
+    "0 & c-ad \n",
     "\\end{array}\n",
     "\\right),\n",
     "\\end{align*}\n",
     "\n",
-    "which has $T=-c+(a-bc)$, $D=-c(a-bc)$ and $T^2-4D = [c+(a-bc)]^2 >0$. Thus, in cases (a) and (c), when $a-bc>0$, we have $D<0$ and so it is a saddle point. In cases (b) and (d), when $a-bc<0$, we have $D>0$ and $T<0$, and so it is a stable node. These findings are in accord with the direction fields and our previous interpretation of the behaviour of the system. \n",
+    "We could calculate the trace and determinant, or we can note that the 0 in the off-diagonal means we can just read off the eigenvalues as $\\lambda_1=-a$ and $\\lambda_2=c-ad$. Therefore, looking back at our phase portraits from last time, in cases (a) and (c), when $c-ad<0$ (look at the horizontal axis), we have a stable node at this point. In cases (b) and (d), when $c-ad>0$, we have a saddle point. These findings are in accord with the direction fields and our previous interpretation of the behaviour of the system. \n",
     "\n",
-    "Using a similar argument (or just the symmetry of the equations), we can show that $(0,c)$ is a stable node in cases (a) and (d), and a saddle point in cases (b) and (c). \n",
+    "Using a similar argument (or just the symmetry of the equations), we can show that $(0,c)$ is a saddle in cases (a) and (d), and a stable node in cases (b) and (c). \n",
+    "\n",
+    "----\n",
     "\n",
     "**The coexistence equilibrium**\n",
     "\n",
@@ -111,11 +121,19 @@
     " \n",
     "## A bifurcation diagram\n",
     "\n",
+    "````{card}\n",
     "<img src='transcritical2.png' height=\"300\" alt=\"Bifurcation diagram of the competition model\">\n",
     "\n",
     "*Transcritical bifurcations in the competition model. Parameter values: $b=0.5$, $c=5$, $d=0.75$.*\n",
+    "````\n",
     "\n",
-    "We can also plot a bifurcation diagram of the system. This is slightly more complicated since we now have two variables and multiple parameters, but we just focus on how one parameter impacts one variable. Here we actually see three different transcritical bifurcations at different points as we vary the Red Squirrel carrying capacity, $a$.\n",
+    "We can also plot a bifurcation diagram of the system. This is slightly complicated since we now have two variables and multiple parameters, but we can just focus on how one parameter impacts one variable. Here we see three different transcritical bifurcations at different points as we vary the red squirrel carrying capacity, $a$.\n",
+    "\n",
+    "* When $a$ is low, the Grey-only equilibrium (grey line with $R=0$) is stable, the Red-only equilibrium (red line) is unstable and the coexistence equilibrium (blue) is negative (and unstable).\n",
+    "* When $a$ is intermediate, the coexistence equilibrium becomes positive and stable and the Grey-only equilibrium becomes unstable through a transcritical bifurcation. The Red-only equilibrium remains unstable.\n",
+    "* When $a$ is high, the coexistence equilibrium becomes unstable (and actually negative in $G$, though this plot does not show that) and the Red-only equilibrium becomes stable through a transcritical bifurcation. The Grey-only equilibrium remains unstable.\n",
+    "\n",
+    "(There is a third transcritical bifurcation at 0 where the Red-only and Grey-only equilibria collide, but this makes no real difference to the dynamics since we assume $a>0$).\n",
     "\n",
     "Note what we have achieved here: we have mapped out all possible behaviours of the system without having to specify exactly what the values of the parameters are, and without having to calculate the location of the equilibrium point. \n",
     "\n",
@@ -123,7 +141,7 @@
     "\n",
     "* Linear stability analysis allows us to classify the behaviour of a system near an equilibrium.\n",
     "* Competing species *can* coexist with each other in the long term, provided the effects of interspecific competition are quite weak (in fact, if we assume equal carrying capacities, $a=c$, we require both $b<1$ and $d<1$).\n",
-    "* Very often there will be **competitive exclusion**, where only one species can survive in the long term, whenever the effects of inter-specific competition is quite strong.\n"
+    "* Very often there will be **competitive exclusion**, where only one species can survive in the long term, whenever the effects of inter-specific competition is quite strong. \n"
    ]
   },
   {
@@ -137,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
