--- a/_sources/ch4.ipynb
+++ b/_sources/ch4.ipynb
@@ -5,7 +5,7 @@
    "id": "4db3ff80",
    "metadata": {},
    "source": [
-    "# 4 - Predator-Prey models <a name=\"chapter4\"></a>\n",
+    "# 4 - Predator-Prey models \n",
     "\n",
     "## A first model\n",
     "\n",
@@ -24,6 +24,16 @@
     ":class: tip\n",
     "Write out the Jacobian matrix for the predator-prey system.\n",
     "````` \n",
+    "```{dropdown} Click for solution\n",
+    "\\begin{align*}\n",
+    "J=&\\left(\n",
+    "\\begin{array}{cc}\n",
+    "a-bP^* & -bN^*  \\\\\n",
+    "dP^* & -c+dN^*  \n",
+    "\\end{array}\n",
+    "\\right),\n",
+    "\\end{align*}\n",
+    "```\n",
     "\n",
     "We can see that the trivial equilibrium, $(N,P)=(0,0)$, is unstable (since $a>0$). What about the coexistence equilibrium? This evaluates to:\n",
     "\n",
@@ -38,10 +48,11 @@
     "\n",
     "Here, $T=0$ and $D=ac>0$. These conditions mean that the eigenvalues at this equilibrium have zero Real part and are purely Imaginary. The behaviour near the steady state is then for 'centres', a family of neutrally-stable closed orbits around the equilibrium (note, these are *not* limit cycles). We therefore predict that these two populations will constantly cycle: with low predation the prey density increases; this produces more food for predators, and so the predator numbers begin to rise; this in turn starts to push the prey numbers back down; finally, with their food supplies falling, the predator numbers also drop down. A phase portrait of these dynamics would look like this,\n",
     "\n",
+    "````{card}\n",
     "<img src='predpreycentre.png' height=\"300\" alt=\"Phase portrait of predator-prey model showing a centre\">\n",
     "\n",
-    "*Figure: Sketch of phase portrait for predator-prey model shopwing a centre.\"\n",
-    "\n",
+    "*Figure: Sketch of phase portrait for predator-prey model showing a centre.\"*\n",
+    "````\n",
     "\n",
     "## A more realistic model\n",
     "While it is nice to have demonstrated the existence of cycles, these are not structurally stable, which suggests something may not be quite right. From our previous models we might already think of two additions to make the model more realistic. One is that we ignored any density-dependence, meaning prey in particular could grow to infinite levels. Another is that we assumed predation was linearly dependent on prey density, whereas we previously argued it should be saturating. Including these assumptions modifies the model to,\n",
@@ -62,6 +73,8 @@
     "\\right),\n",
     "\\end{align*}\n",
     "\n",
+    "----\n",
+    "\n",
     "**Prey-only equilibrium** \n",
     "\n",
     "In this case the Jacobian reduces to,\n",
@@ -77,6 +90,8 @@
     "\n",
     "Therefore stability depends on the growth rate of predators. If the growth rate is negative the prey-only equilibrium is stable, but if it is positive the prey-only equilibrium is unstable. \n",
     "\n",
+    "----\n",
+    "\n",
     "**Coexistence equilibrium**\n",
     "\n",
     "Using what we know about this equilibrium to our advantage, the Jacobian becomes,\n",
@@ -90,16 +105,20 @@
     "\\right),\n",
     "\\end{align*}\n",
     "\n",
-    "From here we can find that the determinant is given by, $D=bdAN^*P^*/(N+A)^3>0$, and the trace by, $T=-\\alpha N^*+bN^*P^*/(N+A)^2$. Stability therefore depends on whether the trace is positive or negative, which depends on the balance of intraspecific prey competition and predation. In fact, losing stability by crossing from a negative to a positive trace leads to a specific type of bifurcation and a new dynamic behaviour.\n",
+    "From here we can find that the determinant is given by, $D=bdAN^*P^*/(N+A)^3>0$, and the trace by, $T=-\\alpha N^*+bN^*P^*/(N+A)^2$. Stability therefore depends on whether the trace is positive or negative, which we can see depends on the balance of intraspecific competition in the prey and predation: if competition is high relative to predation, we will have a negative trace and the equilibrium is stable; if predation is high relative to competition, we will have a positive trace and the equilibrium is unstable.\n",
+    "\n",
+    "Notice that if we vary one parameter, $\\alpha$, say, we could move the system from being a stable spiral to being an unstable spiral, since we move from a negative to a positive trace. This is a change in stability, and therefore a bifurcation, but one that we have not yet seen in practice and which cannot occur in one-dimensional systems.\n",
     "\n",
     "## Hopf bifurcation\n",
     "The previous three bifurcations are the standard types that occur in one and higher dimensions. There are further bifurcations that only occur in two or more dimensions. One of particular importance is the Hopf bifurcation. In this case changing a parameter turns a stable spiral in to an unstable spiral. At this point a unique, stable closed orbit emerges from the equilibrium. This results in the population cycling/oscillating. It is not very easy to draw a bifurcation diagram in this case, but we can see the process by looking at the phase portraits as we vary a parameter. \n",
     "\n",
     "The example in the figure below comes from the predator-prey model above. Here we see we initially have a stable spiral, but that as we increase $\\alpha$ the equilibrium loses stability and starts to spiral away. However, this outward trajectory does not continue to spiral out but tends towards a closed orbit (which can be seen clearly in the right-hand figure). An initial condition from further away starts to spiral in but also approaches this closed orbit. This is a much stronger result for population cycles than the centres we saw in the simple model. Hopf bifurcations have important consequences as populations which are fluctuating may be much harder to measure or control.\n",
     "\n",
+    "````{card}\n",
     "<img src='hopf.png' height=\"300\" alt=\"Plots showing emergence of a limit cycle in the predator-prey model\">\n",
     "\n",
     "*Figure: Example of a Hopf bifurcation in the predator-prey model, equations (1.4.3)-(1.4.4) with a type II functional response. Parameter values: $a=5$, $b=1$, $c=0.5$, $d=2$, $A=1$.*\n",
+    "````\n",
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
@@ -124,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
