--- a/_sources/ch5.ipynb
+++ b/_sources/ch5.ipynb
@@ -5,7 +5,7 @@
    "id": "df41dd1e",
    "metadata": {},
    "source": [
-    "# 5 - Epidemics in human populations <a name=\"chapter5\"></a>\n",
+    "# 5 - Epidemics in human populations \n",
     "\n",
     "## Introducing the SIR model\n",
     "\n",
@@ -15,9 +15,11 @@
     "\n",
     "We will initially assume we are interested in infectious diseases of human populations. When thinking about the spread of disease through a human population, it is clearly not very helpful to consider all individuals as identical, as individuals will move through different stages over the course of an infection. Let's draw a schematic diagram to picture this: \n",
     "\n",
+    "````{card}\n",
     "<img src='sir.png' height=\"300\" alt=\"schematic of the SIR epidemic model\">\n",
     "\n",
     "*Figure: Schematic of the SIR epidemic model.*\n",
+    "````\n",
     "\n",
     "Before a disease emerges, all individuals in the population are *susceptible*. Once exposed to the disease, individuals may then become *infected* (and also *infectious*). Finally, individuals will eventually fight off the disease to become *recovered* and *immune*.\n",
     "\n",
@@ -63,19 +65,23 @@
     ":class: tip\n",
     "Draw the two qualitatively different phase portraits for this system.\n",
     "`````\n",
-    "\n",
+    "```{dropdown} Click for solution\n",
     "Remember where two (different) nullclines intersect is necessarily an equilibrium, which means here we have a continuum of equilibria along the line $I=0$. Using our equations we can then find out in what regions $S$ and $I$ will be increasing or decreasing. Again, note it doesn't matter that we can't say precisely the direction of a trajectory anywhere on our plot; knowing the qualitative direction of travel gives us all the information that we need. \n",
     "\n",
     "<img src='phase_sir.png' height=\"300\" alt=\"2 phase portraits of SIR model\">\n",
     "\n",
     "*Figure: Two sketches of the phase portrait for the SIR model, with $R_0<1$ and $R_0>1$.*\n",
+    "```\n",
     "\n",
-    "Note that $\\beta N-\\gamma>0 \\implies \\beta N/\\gamma>1$. \n",
+    "In the first case, the vertical nullcline at $S=\\gamma/\\beta$ does not appear in the feasible region, so actually has no impact on the dynamics. In fact we will always just drop down towards $I=0$ and the disease dying out. In the second case, the phase portrait is divided into two regions. If we start in a region to the right of the nullcline, the infected density initially increases – we have an epidemic – before crossing the vertical nullcline and approaching $I=0$ again. Therefore the equilibria where $S<\\gamma/\\beta$ appear to be locally stable (which it turns out is equivalent to the second eigenvalue being negative).\n",
+    "\n",
+    "The divide between these two cases is whether $N>\\gamma/\\beta$ or not. We can rearrange this to the condition $\\beta N/\\gamma>1$. This ratio is known as $R_0$, so we have that if $R_0>1$ we get an epidemic but if $R_0<1$ the disease dies out. \n",
     "\n",
     "## The basic reproductive ratio, $R_0$ \n",
     "\n",
     "There is a very strong chance you have heard the terms $R$ or $R_0$ in discussions about the rate of spread of covid-19. We define $R_0=\\beta N/\\gamma$ as the basic reproductive ratio of the disease: 'The average number of secondary infections caused by one infected host in an otherwise disease-free population.' Note that $\\beta N$ gives the total infections caused in a disease-free population, and $1/\\gamma$ is the infectious period. So $R_0$ gives the number of infections caused by an individual in the time that it's infected near the start of an epidemic. The more general term, $R=\\beta S/\\gamma$ gives the number of new infections per case later in the epidemic when many individuals have already been infected and/or recovered.\n",
     "\n",
+    "````{card}\n",
     "| Disease | R_0 | \n",
     "| --- | --- |\n",
     "|Flu | 1-3 |\n",
@@ -87,21 +93,23 @@
     "|Measles | 12-18|\n",
     "\n",
     "*Estimates of $R_0$ for some important human diseases.*\n",
-    "\n",
+    "````\n",
     "\n",
     "## The epidemic curve\n",
     "\n",
     "The phase portraits demonstrate again that an epidemic should always burn out and the population return to being disease-free. Interestingly the phase portraits also suggest that not all of the population will get infected during an epidemic. As we have already said, due to the non-linearity of the system we are unable to find an exact solution and therefore cannot say precisely what the dynamics should look like. However, it is useful to understand what the epidemic curve - the number of perople infected over time - looks like. With some approximations it is possible to express this as a mathematical formula, but we shall just look at some numerical output as shown in the left-hand side of the figure. This gives a characteristic bell-shaped curve. This is in fact the sort of curve we see from data from many real-world epidemics. In the right-hand side we show how the reproductive ration $R$ changes during the epidemic. Notice that the peak of the epidemic is precisely at $R=1$.\n",
     "\n",
+    "````{card}\n",
     "<img src='epicurve_shef.png' height=\"300\" alt=\"An epidemic time-course from the SIR model with $R_0=3$\">\n",
-    "<img src='Rcurveshef.png' height=\"300\" alt=\"Plot of the value of $R$ over the course of an epidemic with $R_0=3\">\n",
+    "<img src='Rcurveshef.png' height=\"300\" alt=\"Plot of the value of $R$ over the course of an epidemic with $R_0=3$\">\n",
     "\n",
     "*Figure: An epidemic curve based on a populaion of $N$=500,000 and $R_0=3$ and how the value of $R$ changes during the epidemic.*\n",
+    "````\n",
     "\n",
     "## 3 key points\n",
     "1. We can model diseases using a compartment framework called the SIR model.\n",
     "2. An epidemic will occur when $dI/dt$ is initially positive, but will always reach an equilibrium where $I=0$.\n",
-    "3. We can measure how quickly a disease initially spreads using $R_0$, and this tells us with there will be an epidemic or not."
+    "3. We can measure how quickly a disease initially spreads using $R_0$, and this tells us with there will be an epidemic or not. "
    ]
   },
   {
@@ -115,7 +123,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
