--- a/_sources/ch7.ipynb
+++ b/_sources/ch7.ipynb
@@ -1,12 +1,11 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5199e715",
    "metadata": {},
    "source": [
-    "# 7 - Vaccination and disease in the wild <a name=\"chapter7\"></a>\n",
+    "# 7 - Vaccination and disease in the wild \n",
     "\n",
     "## Vaccination\n",
     "\n",
@@ -63,6 +62,16 @@
     ":class: tip\n",
     "Write out the general Jacobian for this system.\n",
     "`````\n",
+    "```{dropdown} Click for solution\n",
+    "\\begin{align*}\n",
+    "J=&\\left(\n",
+    "\\begin{array}{cc}\n",
+    "b-d-\\beta I^* & b-\\beta S^*+\\gamma\\\\\n",
+    "\\beta I^* & \\beta S^*-(\\alpha+d+\\gamma)\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\end{align*}\n",
+    "```\n",
     "Substituting in our equilibrium values for $S^*$ and $I^*$ means that,\n",
     "\n",
     "\\begin{align*}\n",
@@ -76,7 +85,7 @@
     "\n",
     "From here we can find easily that $D=(b-d)(d+\\alpha+\\gamma)$, which is positive provided $b>d$, as we have assumed all along. With some re-arranging, we then have $T=(b-d)(b+\\gamma)/[(b-d)-\\alpha]$. Since we are assuming $b>d$ then the numerator is positive. For the fixed point to be stable we require $T<0$ which therefore requires $\\alpha>(b-d)$ in the denominator.\n",
     "\n",
-    "So, what can we conclude here? That for an exponentially growing population of rabbits, provided the disease is sufficiently virulent, introducing the myxoma virus will control the rabbit population to an equilibrium level. We have therefore shown, using mathematical models, that an infectious disease can be used as an effective control mechanism against biological invasions.\n",
+    "So, what can we conclude here? That for an exponentially growing population of rabbits, provided the disease is sufficiently virulent, introducing the myxoma virus will control the rabbit population to an equilibrium level. We have therefore shown, using mathematical models, that an infectious disease can be used as an effective control mechanism against biological invasions. \n",
     "\n",
     "## 3 key points\n",
     "1. We can estimate how much of a population needs to be vaccinated to prevent a disease outbrak using $R_0$.\n",
@@ -95,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -109,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
