--- a/_sources/ch9.ipynb
+++ b/_sources/ch9.ipynb
@@ -2,110 +2,151 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ffe80c5",
+   "id": "c6484df6",
    "metadata": {},
    "source": [
-    "# 9 - A within-host HIV model <a name=\"chapter9\"></a>\n",
+    "# 9 - A within-host Covid model <a name=\"chapter8\"></a>\n",
     "\n",
+    "Earlier, we were thinking about the dynamics of disease at the scale of human or ecological populations. Often, though, we will be more concerned with the health of individual patients, particularly from a medical perspective. In these cases, we want to know how a virus or bacteria grows and develops inside the body, and how our immune system interacts with it. To study these dynamics we therefore require a *within-host model*. While the biology here may seem less intuitive, it is important to remember that we are still dealing with populations. But whereas we previously thought of populations as groups of humans or animals, we are now looking at populations of cells or virus particles. \n",
     "\n",
+    "## Case study: Covid-19\n",
     "\n",
-    "## Case study: HIV\n",
-    "\n",
-    "Human immunodeficiency virus (HIV) infects immune cells called 'CD4$^+$ T-cells', which form an important part of the human immune system. HIV enters these T-cells, begins to replicate and then releases new virus particles in to the bloodstream. Immediately after infection, the virus grows rapidly and produces flu-like symptoms in the patient. After a few months, these symptoms disappear and the virus concentration reduces to a lower, but steady, level. This 'asymptomatic period' can last for years, with the virus density staying roughly constant, and the concentration of T-cells very slowly dropping. Eventually, the T-cell density becomes so low that the patient's immune system is no longer effective, a condition called aquired immunodeficiency syndrome (AIDS). The patient is then at risk from life-threatening opportunistic infections. In the mid-1990s, much work was being done to explore the dynamics of HIV and to produce potential treatments, including the development of mathematical models led by Perelson and Nelson.\n",
-    "\n",
-    "## A (pre-treatment) model\n",
-    "\n",
-    "As with the epidemic models, let's start by establishing our variables and drawing a schematic of what is happening in this system. The variables that we want to keep track of (before treatment, at least), are:\n",
-    "\n",
-    "* Healthy T-cells ($T$)\n",
-    "* Infected T-cells ($T^*$)\n",
-    "* Virus particles ($V$)\n",
-    "\n",
-    "We will only keep track of the concentration of virus particles in the bloodstream, not the 'intracellular' concentrations. Our schematic should look like this:\n",
-    "\n",
-    "Healthy T-cells are produced at some constant rate $s$ by the body, but also decay at some rate $d$. These healthy cells become infected through contact with virus, in a mass-action manner, with coefficient $k$. These infected T-cells then decay at some rate $\\delta$. New virus particles are produced when infected T-cells die, with $N$ giving the average number of virus particles produced by each cell. The virus then also decays at some rate $c$. The system can therefore be expressed with the following set of ODEs:\n",
+    "We will look at a relatively simple model of virus-cell dynamics that *loosely* describes the interaction between Covid-19 virus particules and a type of human immune cell callted the T-cell. The model is borrowed from works by Almocera et al. (2018) and Hernandez-Vargas & Velasco-Hernandez (2021). We assume that the virus grows in the body according to classic logistic growth, that it decays at some background rate but is also killed by T-cells. T-cells themselves are produced by the body at some constant, background rate, but also proliferate when they sense virus present. Finally the T-cells also decay. We can write down our model as follows,\n",
     "\n",
     "\\begin{align}\n",
-    "\\frac{dT}{dt} &= s-dT-kVT\\label{hiv1}\\\\\n",
-    "\\frac{dT^*}{dt} &= kVT-\\delta T^*\\label{hiv2}\\\\\n",
-    "\\frac{dV}{dt} &= N\\delta T^*-cV\\label{hiv3}\n",
+    "\\frac{dV}{dt} &= pV(1-V/K)-\\beta VT - \\mu V\\\\\n",
+    "\\frac{dT}{dt} &= s+rT\\left(\\frac{V^2}{V^2+c^2}\\right)-\\delta T\n",
     "\\end{align}\n",
     "\n",
-    "It is easy to see that there is an HIV-free equilibrium for $(T,T^*,V)=(s/d,0,0)$. We have not covered how to assess stability in a three-dimensional system in this module. In fact, the trace-determinant conditions we have used in previous models are a special case of stability criteria called *Routh-Hurwitz conditions*. We will not cover these here, but using them we can find that the HIV-free equilibrium is stable if $c>kNs/d$. In other words, the decay rate of the virus must be high, and the infection rate and production rate (i.e. $N$) must be low. \n",
+    "As usual, all the parameters are positive and we will also assume that $r>\\delta$. There are a few things to notice about this model:\n",
     "\n",
-    "Of course, when a patient is to undergo treatment, they will not be HIV-free! We are therefore more interested in the pre-treatment infected steady-state. Setting the equations for $dT^*/dt$ and $dV/dt$ to zero, yields,\n",
-    "\n",
-    "\\begin{equation}\n",
-    "N\\delta T^*_0=cV_0 \\text{ and } kV_0T_0=\\delta T^*_0 \\implies T_0=\\frac{c}{Nk} \n",
-    "\\end{equation}\n",
-    "\n",
-    "Solving dT/dt=0, then gives,\n",
-    "\n",
-    "\\begin{equation}\n",
-    "V_0=\\frac{sN}{c}-\\frac{d}{k} \n",
-    "\\end{equation}\n",
-    "\n",
-    "and, by substituting back in,\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T^*_0=\\frac{kV_0T_0}{\\delta} \n",
-    "\\end{equation}\n",
-    "\n",
-    "## Treatment\n",
-    "\n",
-    "Assume a patient arrives with their virus and T-cell concentrations at the pre-treatment steady state. We then wish to put them on a course of treatment. One of the most effective early treatments for HIV was using 'protease inhibitors'. These drugs did not prevent infection, but meant that any new virus produced inside infected T-cells were non-infectious. The system therefore becomes:\n",
-    "\n",
-    "\\begin{align}\n",
-    "&\\frac{dT}{dt} = s-dT-kV_IT\\label{hiv11}\\\\\n",
-    "&\\frac{dT^*}{dt} = kV_IT-\\delta T^*\\label{hiv12}\\\\\n",
-    "&\\frac{dV_I}{dt} = -cV_I\\label{hiv13}\\\\\n",
-    "&\\frac{dV_{NI}}{dt} = N\\delta T^*-cV_{NI}\\label{hiv14}\n",
-    "\\end{align}\n",
-    "\n",
-    "In the early stages of treatment, it is reasonable for us to assume that the number of healthy T-cells stays roughly constant at it's pre-treatment level $T(t)=T_0$, so dT/dt can be ignored. We also know that before treatment, all virus particles were of the infective type, such that $V_I(0)=V_0$ and $V_{NI}(0)=0$. Given this, it is easy to show that,\n",
-    "\n",
-    "\\begin{equation}\n",
-    "V_I(t)=V_0e^{-ct}\\label{vt}\n",
-    "\\end{equation}\n",
-    "\n",
-    "Given that $T(t)=T_0$, we now find we have a linear equation,\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\frac{dT^*}{dt} +\\delta T^*= kV_IT_0\n",
-    "\\end{equation}\n",
-    "\n",
-    "This can be solved using the standard method of an integrating factor:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T^*(t)=\\frac{kT_0V_0}{\\delta(\\delta-c)}\\left(\\delta e^{-ct}-ce^{-\\delta t}\\right)\n",
-    "\\end{equation}\n",
+    "* When a virus is killed by a T-cell, there is no corresponding killing of the cell itself.\n",
+    "* T-cell production is constant, not a per-capita rate.\n",
+    "* The proliferation function is sigmoidal - while virus density is small little proliferation occurs, but past a threshold value it rapidly increases. Quite a lot of the analysis is going to depend on knowledge of what this proliferation function looks like.\n",
     "\n",
     "`````{admonition} Have a go\n",
     ":class: tip\n",
-    "Using similar methods show that,\n",
+    "Sketch the curve $r\\left(\\frac{V^2}{V^2+c^2}\\right)$ and discuss its key features with your neighbours.\n",
+    "`````\n",
+    "```{dropdown} Click for solution\n",
+    "The curve is sketched below. The key points to note are that:\n",
     "\n",
-    "\\begin{equation}\n",
-    "V_{NI}(t)=\\frac{cV_0}{c-\\delta}\\left(\\frac{c}{c-\\delta}\\left(e^{-\\delta t}-e^{-ct}\\right)-\\delta te^{-ct}\\right)\n",
-    "\\end{equation}\n",
+    "* It starts at 0.\n",
+    "* It is strictly increasing.\n",
+    "* It tends towards $r$ .\n",
+    "* It has a sigmoidal shape.\n",
+    "\n",
+    "<img src='covid_curve.png' height=\"300\" alt=\"Curve\">\n",
+    "\n",
+    "*Figure: Sketch of the proliferation function.*\n",
+    "```\n",
+    "\n",
+    "Let us consider the equilibria of this system. If we factorise the first equation we find two possible ways to make it equal zero:\n",
+    "\n",
+    "* $V=0$\n",
+    "* $p(1-V/K)-\\beta T - \\mu =0 \\implies T=(p(1-V/K)-\\mu)/\\beta$\n",
+    "\n",
+    "Substituting $V=0$ into the second equation, we can find that this requires $T=s/\\delta$ for an equilibrium. This will be the virus-free equilibrium, with no virus and T-cells present at their background density.\n",
+    "\n",
+    "For the second equilibrium we can see that the result is likely to be quite complicated. Indeed, there may even be more than one equilibrium produced. To save ourselves a lot of tedious algebra let us instead examine the phase portrait.\n",
+    "\n",
+    "## A graphical analysis\n",
+    "\n",
+    "We have a two-dimensional system and both variables must be non-negative to make biological sense. We can use the workings we used when finding the equilibria to help us find the nullclines. The nullclines from the first equation give us:\n",
+    "\n",
+    "* $V=0$ - a straight vertical line.\n",
+    "* $T=p(1-V/K)-\\mu)/\\beta$ - a decreasing line strating at $(p-\\mu)/\\beta$ and crossing 0 at $V=K(1-\\mu/\\beta)$.\n",
+    "\n",
+    "After a couple of lines of working we can find the nullcline from the second equation to be,\n",
+    "\n",
+    "* $T=\\frac{s}{\\delta-r\\left(\\frac{V^2}{V^2+c^2}\\right)}$.\n",
+    "\n",
+    "What does this nullcline look like? It starts at $T=s/\\delta$ when $V=0$ and as $V$ gets very large we find $T\\to s/(\\delta-r)$. In between these extremes we have this sigmoidal proliferation function to worry about. Note that $V^2/(V^2+c^2)$ varies from 0 to 1 and is strictly increasing and that $r>\\delta$. This tells us two things:\n",
+    "\n",
+    "1. The nullcline is strictly increasing.\n",
+    "2. At some point the denominator will pass through zero (some further work finds that techncially this happens twice, but one of the values occurs for $V<0$).\n",
+    "\n",
+    "One additional thing to note is that the term, $V^2/(V^2+c^2)$ remains small up to reasonably high values of $V$. Therefore this term will initially not effect the nullcline much as $V$ increases, meaning our nullcline is initially quite flat. We can put all of this together to form our phase portrait.\n",
+    "\n",
+    "````{card}\n",
+    "<img src='whcovid.jpg' height=\"300\" alt=\"Phase portrait of within-host Covid-19 model\">\n",
+    "\n",
+    "*Figure: Phase portraits of the within-host Covid-19 model.*\n",
+    "````\n",
+    "\n",
+    "What we see, then, is that there is only one equilibrium when the virus is present, and for the assumptions we have made about relative parameter values, it appears to be a stable spiral. We can additionally note that the initial dynamics are for a rapid rise in virus concentration but little change in T-cell density, before the virus becomes too prevalent and T-cell proliferation begins. We can also note that the virus density at the equilibrium is considerably lower thank it would be without T-cells. Examining the phase portrait, we might also conclude that the virus-free equilibrium will only become stable if we can move the $T$ nullcline far enough upwards that the two non-zero nullclines no longer intersect. This would require $s/\\delta>(p-\\mu)/\\beta$. Let us see if we can confirm that with linear stability analysis.\n",
+    "\n",
+    "## Linear stability analysis\n",
+    "\n",
+    "The general Jacobian for the system is given by,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "J=&\\left(\n",
+    "\\begin{array}{cc}\n",
+    "p-\\frac{2pV^*}{K}-\\beta T^*-\\mu & -\\beta V^*\\\\\n",
+    "rT^*\\frac{2V^*c^2}{(V^{*2}+c^2)^2} & r\\frac{V^{*2}}{V^{*2}+c^2}-\\delta\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "----\n",
+    "\n",
+    "**Virus-free equilibrium** - $V=0,T=s/\\delta$.\n",
+    "\n",
+    "Since $V^*=0$ both the top-right and bottom-left entries are zero, meaning we can read off the eigenvalues as the two terms on the main diagonal:\n",
+    "\n",
+    "* $\\lambda_1=p-\\beta T^*-\\mu$\n",
+    "* $\\lambda_2=-\\delta$\n",
+    "\n",
+    "The second eigenvalue is negative, so everything depends on the first. Re-arranging we require $T^*>(p-\\mu)/\\beta$. Recall that for the virus free equilibrium we have $T^*=s/\\delta$. Therefore this equilibrium is only stable when $s/\\delta>(p-\\mu)/\\beta$, exactly as we surmised was the case from our phase portrait.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "**Virus-present equilibrium**\n",
+    "\n",
+    "You will recall that we never wrote down an expression for this equilibrium. You might remember from previous lectures, however, that this does not necessarily stop us making conclusions about its stability. We know from the phase portrait that there is only one equilibrium to worry about. We also know from the equilibrium conditions that:\n",
+    "\n",
+    "* $p(1-V^*/K)-\\beta T-\\mu=0$\n",
+    "* $rV^{*2}/(V^{*2}+c^2)-\\delta = -s/T^*$.\n",
+    "\n",
+    "Substituting these values in to the Jacobian we now find,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "J=&\\left(\n",
+    "\\begin{array}{cc}\n",
+    "-\\frac{pV^*}{K} & -\\beta V^*\\\\\n",
+    "rT^*\\frac{2V^*c^2}{(V^{*2}+c^2)^2} & -s/T^*\n",
+    "\\end{array}\n",
+    "\\right)\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now we must assess stability based on the trade and determinant conditions. These are:\n",
+    "\n",
+    "$tr(J)=-\\frac{pV^*}{K}-\\frac{s}{T^*} <0$\n",
+    "\n",
+    "$det(J) = \\frac{psV^*}{kT^*}+r\\beta V^*T^*\\left(\\frac{2V^*c^2}{V^{*2}+c^2)}\\right)>0$\n",
+    "\n",
+    "This means that whenever the equilibrium at $V^*,T^*>0$ exists, it must be stable. And we know from the phase portrait that the condition for it to exist is the exact opposite of the condition for stability of the virus-free equilibrium.\n",
+    "\n",
+    "## Treatment\n",
+    "\n",
+    "There are many ways we might think about a treatment working in this model. It might be something that reduces the growth rate of the virus, or that encourages T-cell proliferation.\n",
+    "\n",
+    "`````{admonition} Have a go\n",
+    ":class: tip\n",
+    "Taking the model above as your base, write out a model that includes some form of treatment. Explain to your neighbour what effect you would predict to have.\n",
     "`````\n",
     "\n",
-    "This can be added to the soluion for $V_I(t)$ to find the overall density of virus particles in the bloodstream at any time point after treatment has begun. After estimating the values of each of the model parameters, Perelson and his colleagues plotted the model's predictions against data of individual patient's virus concentrations. The figure below shows that the model provides a remarkably good fit.\n",
-    "\n",
-    "<img src='perelson.jpg' height=\"300\" alt=\"Plots of HIV concentrations from patients and model predictions.\">\n",
-    "\n",
-    "*Figure: Virus concentrations in the bloodstream of three patients compared to the model predictions. Taken from Perelson & Nelson (1999).*\n",
-    "\n",
     "## 3 key points\n",
-    "\n",
-    "1. A patient will only be disease-free if the virus decay rate is high, and its infection rate and urst size is low.\n",
-    "2. Under a simplifying assumption the treatment model becomes linear, so we can solve the model explicitly.\n",
-    "3. The treatment model predicts exponential decay of the virus, and matches well to real data."
+    "1. We can build models of cell-virus interactions in much the same way as we did for interactions between whole organisms.\n",
+    "2. The virus will reach a non-zero equilibrium provided it grows quickly and there is limited killing by T cells.\n",
+    "3. The sigmoidal proliferation rate makes T cells initially slow to respond to an infection."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336f3860",
+   "id": "c5987f48",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -113,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
